marcus7777/deko-card-container

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="import" href="/bower_components/iron-icons/device-icons.html">
     <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
     <link rel="import" href="/bower_components/deko-cards/deko-cards.html">
+    <link rel="import" href="/bower_components/deko-card-container/deko-card-container.html">
     <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
     <script>
       var config = {
